# cpp_OOP_labs

lab1/: BigInt.cpp  BigInt.h  CMakeLists.txt  main.cpp  test.cpp
lab2/: CMakeLists.txt  command_line_parser.cpp  command_line_parser.h  factory.cpp  factory.h  file_format_exception.h  file_parser.cpp  file_parser.h  game.cpp  game.h  game_field.cpp  game_field.h  game_rules.cpp  game_rules.h  life_console_interface.cpp  life_console_interface.h  life_interface.cpp  life_interface.h  life_offline_interface.cpp  life_offline_interface.h  main.cpp  test.cpp
lab2/examples/: acorn.life  check_test_glider.life  default.life  gnar.life  gosper_glider_gun.life  test_glider.life
lab2/lab2_GUI/: life_gui_interface.cpp  life_gui_interface.h
lab2/lab2_GUI/qt_project/: CMakeLists.txt  game_widget.cpp  game_widget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab4/: CMakeLists.txt  csv_parser.h  main.cpp  test.csv  tuple_printer.h
